--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,158 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+* {
+  border-collapse: collapse;
+  box-sizing: border-box;
+  font-weight: bold;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content: center;
+  height:80vh;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:0.8em;
 }
+
+ .dropdown{
+   height: 40px;
+   width: 200px;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   color: #555;
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   margin-bottom:2px;
+
+ }
+ .dropdown input[type="text"] {
+   width:100%;
+    height:100%;
+    outline: none;
+    border:0;
+    border-radius:5px;
+    padding-left:5px;
+}
+
+.dropdown input[type="text"]:focus{
+  outline: none;
+}
+
+.dropdown i{
+  float: right;
+  margin-right:5px;
+}
+
+.open{
+  border: 1px solid #ccc;
+  width:200px;
+  border-radius: 5px;
+  padding:0px;
+  box-shadow:0 10px 6px -6px #CCC;
+  z-index:1000;
+  position:absolute;
+}
+
+  .open ul{
+    list-style-type: none;
+    padding: 0px;
+    margin:0px;
+    height: 200px;
+    overflow-y: scroll;
+    border:0;
+    border-bottom: 1px solid #CCC;
+    
+  }
+.input{
+  margin-bottom:8px;
+}
+  .open li{
+    
+    border: 1px solid #EEE;
+    height:40px;
+    
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    justify-content: flex-start;
+  }
+  .dropdown-default{
+    width:100%;
+    display:grid;
+    grid-template-columns: 8fr 1fr;
+  }
+  .dropdown-default span{
+    margin-left:5px;
+    width:80%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .buttons span{
+    cursor:pointer;
+  }
+    .open li input[type="checkbox"] {
+      /* background-color: #888; */
+      margin-right:5px;
+  }
+  .open .buttons{
+    height:60px;
+    display: flex;
+    justify-content: flex-end;
+    padding-top:15px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+     
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+    min-height: 10px;
+    max-height: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+
+  .btn-dark{
+    color:#888; 
+  }
+
+  .btn-blue{
+    color:darkturquoise;
+  }
+
+  .mx-15{
+    margin-left:15px;
+    margin-right: 15px;
+  }
+
+  .selected label span{
+    color:dodgerblue;
+    
+  }
+  .notSelected label span{
+    color: #888;
+  }
+
+
+.open input[type=checkbox] { display:none; }
+input[type=checkbox] + label:before {
+  font-family: FontAwesome;
+  display: inline-block;
+  font-size:1em;
+  margin-left:8px;
+  color:#888;
+}
+
+input[type=checkbox] + label:before { content: "\f096"; }
+input[type=checkbox] + label:before { letter-spacing: 10px; } 
+
+input[type=checkbox]:checked + label:before { content: "\f14a"; } 
+input[type=checkbox]:checked + label:before { letter-spacing: 5px; } 
